# peasytext-rs

./: Cargo.toml  LICENSE  README.md  demo.tape
examples/: demo.rs
src/: client.rs  engine.rs  error.rs  lib.rs  types.rs
