[package]
name = "peasytext"
version = "0.2.2"
edition = "2021"
authors = ["PeasyTools"]
description = "Rust client for PeasyText — text tools, glossary, and guides API"
license = "MIT"
repository = "https://github.com/peasytools/peasytext-rs"
homepage = "https://peasytext.com"
documentation = "https://docs.rs/peasytext"
readme = "README.md"
keywords = ["text", "peasy", "api-client", "tools"]
categories = ["api-bindings"]
exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
